Fix for bug 68824 (XMLParser::getDocumentFromURI returns empty documents for missing pages). r=Pike, sr=bz.